plugins {
    id 'fabric-loom' version '1.15-SNAPSHOT'
}

version = project.mod_version
group = project.maven_group

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

base {
    archivesName = project.archives_base_name
}

repositories {
    maven {
        name = "meteor-maven"
        url = "https://maven.meteordev.org/releases"
    }
    maven {
        name = "meteor-maven-snapshots"
        url = "https://maven.meteordev.org/snapshots"
    }
    maven { url "https://jitpack.io" }
    maven {
        name = 'babbaj-repo'
        url = 'https://babbaj.github.io/maven/'
    }
}

dependencies {
    // Fabric
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Meteor
    modImplementation "meteordevelopment:meteor-client:${project.meteor_version}"
    implementation "dev.babbaj:nether-pathfinder:1.4.1"
    modImplementation files('libs/baritone-api-fabric-1.13.1.jar')
}

processResources {
    filesMatching("fabric.mod.json") {
        expand "version": project.version, "mc_version": project.minecraft_version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding("UTF-8")
}
